Fixed Broken layout when user do click view all on challenge listing https://appirio-community.force.com/cmc/a3v50000000ILWq

--- a/wp-content/themes/tcs-responsive/js/app/challenges/css/ngchallenges.css
+++ b/wp-content/themes/tcs-responsive/js/app/challenges/css/ngchallenges.css
@@ -1,7 +1,6 @@
 /*style.css*/
 .challengesGrid {
     width: 1012px;
-    max-height: 1454px;
     margin: auto;
     font-size: 12px;
     font-weight: 400;
